<resources>
    <string name="app_name">Diko</string>
    <string name="proceed">Proceed With Your</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="newpassword">New Password</string>
    <string name="enterpassword">Please enter your email id or user id</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot">Forgot Password</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="browse_folder">Browse Folder</string>
    <string name="Favourite">Favourite</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="ForgotPasswordcode">Please enter the following \nValidation code has been send to your email id/user id </string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="Submit">Submit</string>
    <string name="save">Save</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="traditionalchinese">Traditional Chinese</string>
    <string name="modernchinese">Modern Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="pushNotification">Push Notification</string>
    <string name="public_private">Public/Private</string>
    <string name="biometric">Biometrics</string>
    <string name="formatesupport">Formate Supported</string>
    <string name="supportfile">doc,pdf,png,jpeg,etc</string>
    <string name="pleaseuploadsuprtformat">Please upload supported formates only</string>
    <string name="uploaddocument">Upload Document</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_browse_fragment">This is browse content</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unsuccessMsg">\"you are using wrong username/email and password\"</string>
    <string name="loremipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_discription">DiscriptionActivity</string>
    <string name="documentview">Document View</string>
    <string name="downloadfragment">Downloaded Document</string>
</resources>
