<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/size_30"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_100dp"
            android:background="@drawable/pagelogo" />

        <TextView
            android:text="@string/ForgotPassword"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="@color/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/ForgotPasswordcode"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textColor="@color/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/enterpassword"
            android:layout_marginTop="@dimen/size_30"
            android:drawableRight="@drawable/keyboard"
            android:layout_height="wrap_content"
            />
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/newpassword"
            android:layout_marginTop="@dimen/size_30"
            android:drawableRight="@drawable/lock"
            android:layout_height="wrap_content"
            />
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/confirmpassword"
            android:layout_marginTop="@dimen/size_30"
            android:drawableRight="@drawable/lock"
            android:layout_height="wrap_content"
            />

        <Button
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:text="@string/Submit"
            android:layout_marginTop="@dimen/size_30"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>