<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
       android:weightSum="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_30">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pushNotification"
            android:textColor="@color/Black" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="ON"
            android:layout_weight="0.2"
            android:textOn="OFF" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_private"
            android:textColor="@color/Black" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="ON"
            android:layout_weight="0.2"
            android:textOn="OFF" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biometric"
            android:textColor="@color/Black" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="ON"
            android:layout_weight="0.2"
            android:textOn="OFF" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remember_me"
            android:textColor="@color/Black" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="ON"
            android:layout_weight="0.2"
            android:textOn="OFF" />
    </LinearLayout>
</LinearLayout>

